feat: add login page and styles

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,5 +6,11 @@
   "name": "cs261-frontend",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "",
+  "description": ""
 }
