--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.21.1",
     "cors": "^2.8.5",
     "express-body-parser-error-handler": "^1.0.7",
     "mssql": "^11.0.1"
