feat: frontend and backend integration
* feat: add feature editInfo with previous commit as .txt file

* fix(form): fix placeholder="1" to value="1" at student year and semester
feat: add save and load draft function from local storage
- Keys = draft_${form_type}

* fix: fixing spelling error in txt file

* fix: add missing red stars for required data

* fix: add mouse hover on summit and draft

* fix: restyling and fix html required

* fix: butttom styling

* feat: add login page and styles

* fix: add required in table questions

* feat: Added function to autofill some question from API /login with some mock-up structure when window loaded

* git commit -m "fix: fix function getFromType (change fetch path to API URL)

* fix: change TU logo and modify API data storage

- Updated TU logo image

- Adjusted data structure in function to match API schema

* feat: add application dashboard

* feat: added pop-up message
- at bottom-right corner for load drafted data
- at middle of screen for save data as draft

* fix: change view password image and delete show user data function

* feat: boilerplate for backend

* feat: add server port configuration and simplify route authentication

* fix: fix side bar and form

* merge: feat/login

* refactor(login): streamline password toggle and remove unused code

* fix(navigation): update back-link references to point to template.html

* fix: font style template.css

* fix: side bar padding in all form.

* fix(form): update button redirect to point to template.html

* fix(auth): add login status check and redirect to login page

* fix(template): add login redirect and improve HTML structure

* fix(template): add logout functionality and update logout link

* fix: fix form styles

* fix: fix font and logo in login page,and fix template.css and add logo.

* fix: fix auto fill function

* feat: refactor index.html to use external stylesheets and enhance application st

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "description": "This repository contains the frontend and backend code for our CS261 project. The system allows students to submit petitions online, track their status, and provides administrators with tools to manage and process these petitions efficiently.",
+  "description": "This repository contains the frontend code for our CS261 project. The system allows students to submit petitions online, track their status, and provides administrators with tools to manage and process these petitions efficiently.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
