--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:16-alpine
 
-COPY ./target/backend-api.jar backend-api.jar
+COPY ./target/crudAPI-0.0.1-SNAPSHOT.jar backend-api.jar
 
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","/backend-api.jar"]
