--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,20 @@
-FROM node:22-alpine
-WORKDIR /usr/app
-COPY package.json .
-RUN npm install --quiet
+# Use an official Node.js image as the base
+FROM node:18
+
+# Set working directory
+WORKDIR /app
+
+# Copy package.json and package-lock.json
+COPY package*.json ./
+
+# Install dependencies
+RUN npm install
+
+# Copy the rest of the application files
 COPY . .
+
+# Expose port 3000
 EXPOSE 3000
+
+# Run the application
+CMD ["npm", "start"]
