--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=myDB;encrypt=true;trustServerCertificate=true;useUnicode=true;characterEncoding=UTF-8
 spring.datasource.username=sa
-spring.datasource.password=cs261
+spring.datasource.password=Cs261pass!
 
 # Enable SQL logging for debugging (optional)
 spring.jpa.show-sql=true
