--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,26 @@
-services:
-  frontend:
-    build: ./frontend
-    container_name: frontend
-    ports:
-      - "3000:3000"
-    command: npm start
+version: "3.8"
 
-  mssql:
-    image: mcr.microsoft.com/mssql/server:2019-latest
-    container_name: mssql
-    ports:
-      - "1433:1433"
-    env_file:
-      - .env
-    environment:
-      SA_PASSWORD: ${SA_PASSWORD}
+services:
+    backend:
+        build: ./backend
+        ports:
+            - "8080:8080"
+        environment:
+            - SPRING_DATASOURCE_URL=jdbc:sqlserver://mssql:1433;databaseName=myDB;encrypt=true;trustServerCertificate=true
+            - SPRING_DATASOURCE_USERNAME=sa
+            - SPRING_DATASOURCE_PASSWORD=Cs261pass!
+        depends_on:
+            - mssql
+
+    frontend:
+        build: ./frontend
+        ports:
+            - "3001:3001"
+
+    mssql:
+        image: mcr.microsoft.com/mssql/server:2019-latest
+        ports:
+            - "1433:1433"
+        environment:
+            - ACCEPT_EULA=Y
+            - SA_PASSWORD=Cs261pass!
