Backend and frontend integration ready to be merge (#19)
* feat: frontend and backend integration

* feat: add feature editInfo with previous commit as .txt file

* fix(form): fix placeholder="1" to value="1" at student year and semester
feat: add save and load draft function from local storage
- Keys = draft_${form_type}

* fix: fixing spelling error in txt file

* fix: add missing red stars for required data

* fix: add mouse hover on summit and draft

* fix: restyling and fix html required

* fix: butttom styling

* feat: add login page and styles

* fix: add required in table questions

* feat: Added function to autofill some question from API /login with some mock-up structure when window loaded

* git commit -m "fix: fix function getFromType (change fetch path to API URL)

* fix: change TU logo and modify API data storage

- Updated TU logo image

- Adjusted data structure in function to match API schema

* feat: add application dashboard

* feat: added pop-up message
- at bottom-right corner for load drafted data
- at middle of screen for save data as draft

* fix: change view password image and delete show user data function

* feat: boilerplate for backend

* feat: add server port configuration and simplify route authentication

* fix: fix side bar and form

* merge: feat/login

* refactor(login): streamline password toggle and remove unused code

* fix(navigation): update back-link references to point to template.html

* fix: font style template.css

* fix: side bar padding in all form.

* fix(form): update button redirect to point to template.html

* fix(auth): add login status check and redirect to login page

* fix(template): add login redirect and improve HTML structure

* fix(template): add logout functionality and update logout link

* fix: fix form styles

* fix: fix font and logo in login page,and fix template.css and add logo.

* fix: fix auto fill function

* feat: refactor ind

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,4 @@
 services:
-  frontend:
-    build: ./frontend
-    container_name: frontend
-    ports:
-      - "3000:3000"
-    command: npm start
 
   mssql:
     image: mcr.microsoft.com/mssql/server:2019-latest
@@ -15,3 +9,32 @@ services:
       - .env
     environment:
       SA_PASSWORD: ${SA_PASSWORD}
+      ACCEPT_EULA: Y
+    volumes:
+      - ./init-scripts:/docker-entrypoint-initdb.d
+    command: /opt/mssql/bin/sqlservr & /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P "${SA_PASSWORD}" -i /docker-entrypoint-initdb.d/startup.sql -C
+    networks:
+      - webnet
+
+  frontend:
+    build: ./frontend
+    container_name: frontend
+    ports:
+      - "3000:3000"
+    command: npm start
+
+  backend:
+    build: ./backend
+    container_name: backend
+    restart: always
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mssql
+    networks:
+      - webnet
+
+
+# network
+networks:
+  webnet:
