--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,10 @@
-FROM openjdk:24-jdk-slim
+FROM maven:3.8.5-openjdk-17 as builder
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
 
-COPY ./target/crudAPI-0.0.1-SNAPSHOT.jar backend-api.jar
-
+FROM openjdk:17-jdk-slim
+WORKDIR /app
+COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","/backend-api.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
