--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:22-alpine
-WORKDIR /usr/app
-COPY package.json .
-RUN npm install --quiet
+WORKDIR /app
 COPY . .
+RUN npm install
 EXPOSE 3000
+CMD ["npm", "start"]
