--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:22-alpine
 WORKDIR /usr/app
 COPY package.json .
-RUN npm install --quiet
+RUN npm install
 COPY . .
-EXPOSE 3000
+CMD ["node", "server.js"]
+EXPOSE 3001
