--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "express-body-parser-error-handler": "^1.0.7"
+    "express-body-parser-error-handler": "^1.0.7",
+    "express-fileupload": "^1.5.1"
   }
 }
